[gd_scene load_steps=22 format=3 uid="uid://50wu1jt67mqg"]

[ext_resource type="Script" uid="uid://dtqbfcsfon5fk" path="res://scripts/ui.gd" id="1_yev5y"]
[ext_resource type="PackedScene" uid="uid://bh2e3rf6yppxo" path="res://scenes/ui_heart.tscn" id="2_gdt2y"]
[ext_resource type="Theme" uid="uid://bskvkfmytudor" path="res://fonts/default-font.tres" id="3_wm3ai"]
[ext_resource type="Texture2D" uid="uid://c6av0eb8ypoap" path="res://sprites/coin.png" id="4_8dubc"]
[ext_resource type="Material" uid="uid://b0xyk8m5xjeue" path="res://shaders/wavy.tres" id="4_gdt2y"]
[ext_resource type="Script" uid="uid://vhpdoxaffmvo" path="res://scripts/version.gd" id="4_wm3ai"]
[ext_resource type="Texture2D" uid="uid://ck8r7vf0xlv3p" path="res://sprites/ability-ui-cointainer.png" id="5_p7vwb"]
[ext_resource type="SpriteFrames" uid="uid://bniyryg3serqv" path="res://resources/abilities/dash-frames.tres" id="6_ktti3"]
[ext_resource type="PackedScene" uid="uid://bp5xi8kgww8wi" path="res://scenes/power_up_ui_instance.tscn" id="7_cgfq5"]
[ext_resource type="Script" uid="uid://w7auqsn81cw0" path="res://scripts/combo.gd" id="8_7dvkv"]

[sub_resource type="LabelSettings" id="LabelSettings_7dvkv"]
font_size = 30
font_color = Color(1, 1, 1, 0.403922)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8dubc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p7vwb"]
atlas = ExtResource("4_8dubc")
region = Rect2(0, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktti3"]
atlas = ExtResource("4_8dubc")
region = Rect2(18, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgfq5"]
atlas = ExtResource("4_8dubc")
region = Rect2(0, 18, 18, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_7dvkv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7vwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktti3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgfq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktti3")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}]

[sub_resource type="Gradient" id="Gradient_ktti3"]
offsets = PackedFloat32Array(0.285714, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cgfq5"]
gradient = SubResource("Gradient_ktti3")

[sub_resource type="LabelSettings" id="LabelSettings_vsj0x"]
font_size = 57

[sub_resource type="LabelSettings" id="LabelSettings_qsv74"]
font_size = 51

[sub_resource type="LabelSettings" id="LabelSettings_cgfq5"]
font_size = 110
font_color = Color(1, 1, 1, 0.733333)

[node name="UI" type="CanvasLayer"]
layer = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Control" type="Control" parent="MarginContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_yev5y")
ui_heart_scene = ExtResource("2_gdt2y")
ui_pickup_scene = ExtResource("7_cgfq5")

[node name="ObjectiveLabel" type="Label" parent="MarginContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 73.0
offset_top = -109.0
offset_right = 473.0
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 15)
size_flags_horizontal = 4
theme = ExtResource("3_wm3ai")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
text = "Survive for 45 seconds"
label_settings = SubResource("LabelSettings_7dvkv")
horizontal_alignment = 1

[node name="TopLeft" type="Control" parent="MarginContainer/Control"]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/TopLeft"]
layout_mode = 0
offset_right = 127.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control/TopLeft/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="ScoreLabel" type="Label" parent="MarginContainer/Control/TopLeft/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("3_wm3ai")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "score"
vertical_alignment = 1
uppercase = true

[node name="Container" type="Panel" parent="MarginContainer/Control/TopLeft/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_8dubc")

[node name="CoinSprite" type="AnimatedSprite2D" parent="MarginContainer/Control/TopLeft/VBoxContainer/HBoxContainer/Container"]
texture_filter = 1
position = Vector2(15, 12)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_7dvkv")
animation = &"Idle"
autoplay = "Idle"
metadata/_aseprite_wizard_interface_config_ = {
"output_section": true,
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"layers": [],
"o_ex_p": "",
"o_folder": "res://sprites",
"o_name": "",
"only_visible": false,
"should_round_fps": true,
"slice": "",
"source": "/home/alex/Pictures/sprites/coin.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "1560cd3b4c4ba0aa7d3134ac3cbb489a"

[node name="CoinsLabel" type="Label" parent="MarginContainer/Control/TopLeft/VBoxContainer/HBoxContainer/Container"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 33.0
offset_top = -4.0
offset_right = 49.0
offset_bottom = 27.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("3_wm3ai")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "5"
vertical_alignment = 1
uppercase = true

[node name="HeartContainer" type="HBoxContainer" parent="MarginContainer/Control/TopLeft/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 14

[node name="BottomLeft" type="Control" parent="MarginContainer/Control"]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AbilityContainer" type="Control" parent="MarginContainer/Control/BottomLeft"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 246.0
offset_right = 112.0
offset_bottom = 358.0
grow_vertical = 0
scale = Vector2(0.48, 0.48)

[node name="BackgroundGradient" type="TextureRect" parent="MarginContainer/Control/BottomLeft/AbilityContainer"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -279.167
offset_top = -134.917
offset_right = -167.167
offset_bottom = -22.9167
grow_vertical = 0
rotation = -0.807136
scale = Vector2(3.09434, 5.32071)
texture = SubResource("GradientTexture2D_cgfq5")

[node name="BackgroundFrame" type="TextureRect" parent="MarginContainer/Control/BottomLeft/AbilityContainer"]
modulate = Color(1, 1, 1, 0.196078)
texture_filter = 1
custom_minimum_size = Vector2(112, 112)
layout_mode = 2
offset_right = 112.0
offset_bottom = 112.0
texture = ExtResource("5_p7vwb")
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "",
"slice": "",
"source": "/home/alex/Pictures/sprites/ability-ui-cointainer.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "f6b7b342bf018d294481eb57fb4baa83"

[node name="AbilitySprite" type="AnimatedSprite2D" parent="MarginContainer/Control/BottomLeft/AbilityContainer"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(57, 56)
scale = Vector2(6, 6)
sprite_frames = ExtResource("6_ktti3")
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"pending_changes": {},
"slice_section": true
}
metadata/_aseprite_wizard_config_ = {
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "/home/alex/Pictures/sprites/dash-icon.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "69ce80bc130f258aa883922e608b4aaf"

[node name="AbilityName" type="Label" parent="MarginContainer/Control/BottomLeft/AbilityContainer"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 3.0
offset_top = -37.5
offset_right = 101.0
offset_bottom = 44.5
scale = Vector2(0.64, 0.64)
theme = ExtResource("3_wm3ai")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 41
text = "dash"
label_settings = SubResource("LabelSettings_vsj0x")
vertical_alignment = 1

[node name="AbilityAmount" type="Label" parent="MarginContainer/Control/BottomLeft/AbilityContainer"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 64.5833
offset_top = 60.4167
offset_right = 106.583
offset_bottom = 107.417
theme = ExtResource("3_wm3ai")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 41
text = "1"
label_settings = SubResource("LabelSettings_qsv74")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopRight" type="Control" parent="MarginContainer/Control"]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Control/TopRight"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 496.0
offset_right = 580.0
offset_bottom = 66.0
grow_horizontal = 0
theme_override_constants/separation = -2

[node name="TimeLabel" type="Label" parent="MarginContainer/Control/TopRight/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("3_wm3ai")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "time"
horizontal_alignment = 2
uppercase = true

[node name="RoundLabel" type="Label" parent="MarginContainer/Control/TopRight/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("3_wm3ai")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "round"
horizontal_alignment = 2
uppercase = true

[node name="BottomRight" type="Control" parent="MarginContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Combo" type="Control" parent="MarginContainer/Control/BottomRight"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -70.0
offset_right = 16.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_7dvkv")

[node name="ComboTextLabel" type="Label" parent="MarginContainer/Control/BottomRight/Combo"]
layout_mode = 2
offset_left = 21.0
offset_top = 10.0
offset_right = 77.0
offset_bottom = 30.0
size_flags_horizontal = 4
theme = ExtResource("3_wm3ai")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "combo"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ComboCounter" type="Label" parent="MarginContainer/Control/BottomRight/Combo"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
offset_left = -24.0
offset_top = -15.0
offset_right = 126.0
offset_bottom = 135.0
pivot_offset = Vector2(75, 75)
size_flags_horizontal = 4
theme = ExtResource("3_wm3ai")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 90
text = "4	"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Control/BottomRight"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -16.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 10
alignment = 2

[node name="PowerUpList" type="VBoxContainer" parent="MarginContainer/Control/BottomRight/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 22.28)
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[node name="VersionLabel" type="Label" parent="MarginContainer/Control/BottomRight/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("3_wm3ai")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "v"
horizontal_alignment = 2
vertical_alignment = 2
script = ExtResource("4_wm3ai")

[node name="DeathScreen" type="VBoxContainer" parent="MarginContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -65.5
offset_right = 129.0
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -6

[node name="Message" type="Label" parent="MarginContainer/Control/DeathScreen"]
material = ExtResource("4_gdt2y")
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_wm3ai")
text = "You died, your score was"

[node name="DeathScoreLabel" type="Label" parent="MarginContainer/Control/DeathScreen"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_wm3ai")
theme_override_font_sizes/font_size = 100
text = "25"

[node name="Message2" type="Label" parent="MarginContainer/Control/DeathScreen"]
material = ExtResource("4_gdt2y")
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_wm3ai")
text = "Press jump to restart"

[node name="CountdownScreen" type="VBoxContainer" parent="MarginContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -46.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -45

[node name="CountdownLabel" type="Label" parent="MarginContainer/Control/CountdownScreen"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_wm3ai")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
text = "3"
label_settings = SubResource("LabelSettings_cgfq5")
vertical_alignment = 1

[node name="CountdownTimer" type="Timer" parent="MarginContainer/Control/CountdownScreen"]
unique_name_in_owner = true

[node name="PauseScreen" type="Control" parent="MarginContainer/Control"]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/Control/PauseScreen"]
modulate = Color(0, 0, 0, 0.772549)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/PauseScreen"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -41.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Label" type="RichTextLabel" parent="MarginContainer/Control/PauseScreen/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_wm3ai")
theme_override_font_sizes/normal_font_size = 38
bbcode_enabled = true
text = "[wave amp=20.0 freq=5.0 connected=1]GAME PAUSED[/wave]"
fit_content = true
horizontal_alignment = 1

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/Control/PauseScreen/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Continue" type="Label" parent="MarginContainer/Control/PauseScreen/VBoxContainer/MenuOptions"]
layout_mode = 2
theme = ExtResource("3_wm3ai")
text = "CONTINUE"
horizontal_alignment = 1

[node name="Restart" type="Label" parent="MarginContainer/Control/PauseScreen/VBoxContainer/MenuOptions"]
modulate = Color(1, 1, 1, 0.266667)
layout_mode = 2
theme = ExtResource("3_wm3ai")
text = "RESTART"
horizontal_alignment = 1

[node name="Exit" type="Label" parent="MarginContainer/Control/PauseScreen/VBoxContainer/MenuOptions"]
modulate = Color(1, 1, 1, 0.266667)
layout_mode = 2
theme = ExtResource("3_wm3ai")
text = "EXIT"
horizontal_alignment = 1
